--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
     color: #fff;
     width: 30px;
     height: 30px;
-    border: 0;
+    border: none;
     text-align: center;
     border-radius: 0 5px 0 5px;
     cursor: pointer;
